Fixed scroll bottom jumping issue

--- a/_engine/creator.scss
+++ b/_engine/creator.scss
@@ -509,7 +509,7 @@ header {
 			.icon-close {
 				float: right;
 				color: #333;
-				opacity: 0.3;
+				opacity: .8;
 				cursor: pointer;
 				margin-right: -20px;
 				margin-top: 22px;
